# MyCobotCppLib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_cn.md
include/: Common.hpp  MyCobot.hpp  SystemInfo.hpp  robosignal_global.hpp
include/log/: Log.hpp  LogReader.hpp
include/mycobot/: MyCobot.hpp
src/: Common.cpp  Firmata.cpp  Firmata.hpp  MyCobot.cpp  SystemInfo.cpp
src/log/: Log.cpp  LogReader.cpp
src/mycobot/: MyCobot.cpp
